# sigstore-key-signing-poc

./: .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  vault-init.sh
.github/workflows/: publish.yaml
sigstore_key_signer/: __init__.py  cli.py  exceptions.py  generate.py  keysigner.py  keyverifier.py  rekor.py
sigstore_key_signer/adapters/: __init__.py  base.py  vault.py
